hphp/hack/test/typecheck/wellformedness_gconst.php
<?hh

newtype X<T as arraykey> = T;

const X<bool> C = true;
